# mcp-server-bench

./: .gitignore  README.md  analyzer.py  fastmcp_server.py  gradio_server.py  http_bench.py  mcp_bench.py  metrics.py  pyproject.toml  run_benchmark.py  runner.py  scenarios.py
analysis/: analyzer.py  plots.py
loadtest/: http_bench.py  mcp_bench.py  runner.py  scenarios.py
servers/: config.py  fastmcp_server.py  gradio_server.py  shared_tools.py
